# pxshot-ocaml

./: .gitignore  CHANGES.md  README.md  dune  dune-project  pxshot.opam
.github/workflows/: release.yml  test.yml
_build/: .db  .digest-db  log
_build/default/: pxshot.install  pxshot.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/examples/: basic.ml  stored.ml
_build/default/examples/.basic.eobjs/: dune__exe__Basic.impl.d  dune__exe__Basic.intf.d
_build/default/examples/.basic.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Basic.cmi  dune__exe__Basic.cmti
_build/default/examples/.basic.eobjs/native/: dune__exe.cmx  dune__exe__Basic.cmx
_build/default/examples/.merlin-conf/: exe-basic  exe-stored  exe-usage
_build/default/examples/.stored.eobjs/: dune__exe__Stored.impl.d  dune__exe__Stored.intf.d
_build/default/examples/.stored.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Stored.cmi  dune__exe__Stored.cmti
_build/default/examples/.stored.eobjs/native/: dune__exe.cmx  dune__exe__Stored.cmx
_build/default/examples/.usage.eobjs/: dune__exe.ml-gen  dune__exe__Usage.impl.d  dune__exe__Usage.intf.d
_build/default/examples/.usage.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Usage.cmi  (+1 more)
_build/default/lib/: pxshot.cma  pxshot.mli
_build/default/lib/.merlin-conf/: lib-pxshot
_build/default/test/: test_pxshot.ml
_build/default/test/.merlin-conf/: exe-test_pxshot
examples/: dune  usage_example.ml
lib/: dune  pxshot.ml  pxshot.mli
test/: dune
(+22 files in other folders)
